0029049: Visualization - restore removed class DsgPrs_DatumPrs